--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.2
   dio_cache_interceptor_hive_store: ^3.2.2
   flutter:
@@ -38,11 +39,11 @@ dependencies:
   hive_flutter: ^1.1.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   build_runner: ^2.4.9
-  hive_generator: ^2.0.1
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
