--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.2.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.4.9
